--- a/main.html
+++ b/main.html
@@ -8,6 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name" >Name</label>
+		<input type="text" id="name" name="name" required>
+
+		<label for="email" >Email</label>
+		<input type="email" id="email" required>
+<br>
+		<label>Gender:</label>
+		<label for="male">Male</label>
+		<input type="radio" id="male" name="gender" required>
+		
+		<label for="female">Female</label>
+		<input type="radio" id="female" name="gender" required>
+
+		<label>Laptop Brands:</label>
+		<select id="laptop">
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
+		</select>
+
+		<label for="age">Age:</label>
+		<input type="number" id="age" required>
+
+		<label for="dob">Date of Birth:</label>
+		<input type="date" id="age" required>
+
+		<label for="password">Password:</label>
+		<input type="password" id="password" required>
+
+		<label for="portfolio">Portfolio:</label>
+		<input type="url" id="portfolio">
+
+		<button>Submit Button</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
