--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 		<label for="age">Age:</label>
 		<input type="number" id="age" required>
 
-		<label for="dob">Date of Birth:</label>
+		<label for="dob">dob:</label>
 		<input type="date" id="age" required>
 
 		<label for="password">Password:</label>
