--- a/main.html
+++ b/main.html
@@ -32,8 +32,8 @@
 		<label for="age">Age:</label>
 		<input type="number" id="age" required>
 
-		<label for="dob">dob:</label>
-		<input type="date" id="age" required>
+		<label for="dob">Date of Birth:</label>
+		<input type="date" id="dob" required>
 
 		<label for="password">Password:</label>
 		<input type="password" id="password" required>
