--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 		<label for="female">Female</label>
 		<input type="radio" id="female" name="gender" required>
 
-		<label>Laptop Brands:</label>
+		<label for="laptop">Laptop Brands:</label>
 		<select id="laptop">
 			<option>Apple</option>
 			<option>Asus</option>
