--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 		<label for="portfolio">Portfolio:</label>
 		<input type="url" id="portfolio">
 
-		<button>Submit Button</button>
+		<button type="submit">Submit Button</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
